1) added application type 2) added boolean to include provider profile

--- a/src/forms/EditListingCommonAttributesForm/EditListingCommonAttributesForm.css
+++ b/src/forms/EditListingCommonAttributesForm/EditListingCommonAttributesForm.css
@@ -64,3 +64,12 @@
     margin-top: 100px;
   }
 }
+
+
+.features {
+  margin-bottom: 24px;
+
+  @media (--viewportMedium) {
+    margin-bottom: 32px;
+  }
+}
