--- a/src/marketplace.css
+++ b/src/marketplace.css
@@ -42,9 +42,11 @@
 
   /* ================ Colors ================ */
 
-  --marketplaceColor: #c0392b;
+  /* --marketplaceColor: #c0392b; */
+  --marketplaceColor: #2D8CFF;
   --marketplaceColorLight: #ff4c38;
-  --marketplaceColorDark: #8c291e;
+  /* --marketplaceColorDark: #8c291e; */
+  --marketplaceColorDark:#39394D;
 
   /* Used with inline CSS SVGs */
   --marketplaceColorEncoded: %23c0392b;
